Travail en cours sur la partie login admin

--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -51,9 +51,7 @@
                         {% endif %}
 
                     <li class="nav-item ms-auto">
-                        <button class="btn btn-primary">
-                            Se connecter
-                        </button>
+                        <a class="nav-link text-black-50" href="{{ path('app_login') }}">Se connecter</a>
                     </li>                  
                 </ul>
             </div>
