--- a/templates/pages/admin_pages/formations.html.twig
+++ b/templates/pages/admin_pages/formations.html.twig
@@ -1,4 +1,4 @@
-{% extends "basefront.html.twig" %}
+{% extends "adminbase.html.twig" %}
 {% block body %}
 
     <div class="container m-auto">
@@ -111,7 +111,16 @@
                             {% endif %}
                         {% endif %}
                     </td>
-                    
+                        <td>
+                            <div class="d-flex flex-row justify-content-center mt-2">
+                                <a href="{{ path('admin.formations.showone', {id:formation.id}) }}" class="btn btn-secondary m-1">Modifier</a>
+                                <form action="{{ path('admin.formations.suppr', {id: formation.id}) }}" method="post" class="d-inline" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer la formation {{ formation.title }} ?')">
+                                    
+                                    <input type="hidden" name="_token" value="{{ csrf_token('delete_formation_' ~ formation.id) }}">
+                                    <button type="submit" class="btn btn-danger m-1">Supprimer</button>
+                                </form>
+                            </div>                        
+                        </td>
                     
                 </tr>
             {% endfor %}
