--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -22,11 +22,18 @@
 	         <li class="nav-item">
 	             <a class="nav-link" href="{{ path('admin.categories') }}">Categories</a>
 	         </li>
-             <li class="nav-item ms-auto">
-                <button class="btn btn-primary">
-                    Se connecter
-                </button>
-            </li>                  
+
+          <li class="nav-item ms-auto">
+              <a class="btn btn-primary" href="{{ path('accueil') }}">Front-office</a>
+          </li>                  
+
+           <li class="nav-item ms-2">
+
+							<form action="{{ path('app_logout') }}" method="post">
+					        <button type="submit" class="btn btn-warning">Déconnexion</button>
+					    </form>             
+
+          </li>                  
 	     </ul>
 	 </div>
 	</nav>        
@@ -49,3 +56,15 @@
 
 {% endblock %}
 
+{% block footer %}
+    <div class="container text-center">
+        <footer>
+            <hr>
+            <p><small><i>
+                Consultez nos <a class="link-secondary" href="{{ path('cgu') }}">Conditions Générales d'Utilisation</a>
+            </i></small></p>
+            
+        </footer>
+    </div>
+{% endblock %}
+{% block javascripts %}{% endblock %}
