--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -22,6 +22,11 @@
 	         <li class="nav-item">
 	             <a class="nav-link" href="{{ path('admin.categories') }}">Categories</a>
 	         </li>
+                    <li class="nav-item">
+                        
+                        <a class="nav-link" href="{{ path('stats') }}">Stats</a>
+
+                    </li>  
 
           <li class="nav-item ms-auto">
               <a class="btn btn-primary" href="{{ path('accueil') }}">Front-office</a>
