--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -49,6 +49,11 @@
 
                     </li>  
                         {% endif %}
+                    <li class="nav-item">
+                        
+                        <a class="nav-link" href="{{ path('stats') }}">Stats</a>
+
+                    </li>  
 
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="nav-item ms-auto">
